<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/dark_half_bg"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/thumbnailImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pic1"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/white_half_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:singleLine="true"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="15sp"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/about_txt"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/about_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/location_txt"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/marker" />

        <TextView
            android:id="@+id/location_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:singleLine="true"

            android:text="@string/miami"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/category_of_poi_txt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/contact_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/organizer_txt"
            app:layout_constraintEnd_toStartOf="@+id/category_of_poi_txt"
            app:layout_constraintStart_toEndOf="@+id/organizer_txt"
            app:layout_constraintTop_toTopOf="@+id/category_of_poi_txt" />

        <TextView
            android:id="@+id/category_of_poi_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/nature"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/location_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/location_txt" />

        <TextView
            android:id="@+id/max_participants_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_25"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/price_of_event_txt"
            app:layout_constraintStart_toStartOf="@+id/organizer_txt"
            app:layout_constraintTop_toBottomOf="@+id/organizer_txt" />

        <TextView
            android:id="@+id/current_participants_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/price_of_event_txt"
            app:layout_constraintEnd_toEndOf="@+id/organizer_txt"
            app:layout_constraintTop_toBottomOf="@+id/organizer_txt" />

        <ImageView
            android:id="@+id/favorites_icon"
            android:layout_width="37dp"
            android:layout_height="38dp"
            app:layout_constraintBottom_toBottomOf="@+id/nameTxt"
            app:layout_constraintEnd_toEndOf="@+id/endDateTxt"
            app:layout_constraintTop_toTopOf="@+id/nameTxt"
            app:srcCompat="@drawable/trash" />

        <TextView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Starts at: "
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/about_txt"
            app:layout_constraintStart_toStartOf="@+id/nameTxt"
            app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

        <TextView
            android:id="@+id/startDateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12/05/2024"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintEnd_toStartOf="@+id/imageView14"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9" />

        <TextView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ends at:"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/startDateTxt"
            app:layout_constraintStart_toStartOf="@+id/contact_txt"
            app:layout_constraintTop_toTopOf="@+id/startDateTxt" />

        <TextView
            android:id="@+id/endDateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="13/05/2026"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView14"
            app:layout_constraintTop_toTopOf="@+id/imageView14" />

        <TextView
            android:id="@+id/price_of_event_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="15555€"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/category_of_poi_txt"
            app:layout_constraintEnd_toEndOf="@+id/category_of_poi_txt"
            app:layout_constraintStart_toStartOf="@+id/category_of_poi_txt" />


        <TextView
            android:id="@+id/organizer_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Organizer"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/location_txt"
            app:layout_constraintEnd_toStartOf="@+id/contact_txt"
            app:layout_constraintStart_toEndOf="@+id/location_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>