<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="80dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:orientation="vertical"
                android:padding="16dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/profileImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/profile" />
                    <TextView
                        android:id="@+id/WelcomeTEXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/welcome_back"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/profileImg"
                        app:layout_constraintTop_toTopOf="@+id/profileImg" />
                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rafael_amorim"
                        android:textColor="@color/white"
                        android:textSize="27sp"
                        app:layout_constraintBottom_toBottomOf="@+id/profileImg"
                        app:layout_constraintStart_toStartOf="@+id/WelcomeTEXT"
                        app:layout_constraintTop_toBottomOf="@+id/WelcomeTEXT" />
                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/profileImg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/profileImg"
                        app:srcCompat="@drawable/bell" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/discover_the_best_place_to_visit"
                    android:textColor="@color/white"
                    android:textSize="27sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- ///////////////////////Popular/////////////////////// -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/CabecalhoListOfEventsHzt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/events_per_day"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/ConteudoListOfEventsHzt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/viewEvent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/white"
        app:fabCradleRoundedCornerRadius="50dp"
        app:fabCradleMargin="8dp"
        app:fabCradleVerticalOffset="6dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/homeIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@id/imageView12"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/bottom_btn1" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/myCalendar"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:gravity="center"
                android:orientation="vertical"
                android:onClick="onMyCalendarClick">
                <ImageView
                    android:id="@id/imageView12"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/bottom_btn2" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:visibility="invisible"
                android:orientation="vertical">
                <ImageView
                    android:id="@id/imageView12"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/bottom_btn1" />
                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textAlignment="center" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/profileBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/bottom_btn3" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@id/imageView12"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/bottom_btn4" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/changeAccountIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/app_bar"
        app:backgroundTint="@color/orange"
        app:maxImageSize="30dp"
        app:tint="@color/white"
        android:src="@drawable/float_icon"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>